--- a/console/pubspec.yaml
+++ b/console/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   uuid: ^4.5.1
   ffi: ^2.1.4
   path_provider: ^2.1.5
+  file_selector: ^1.0.3
 
 dependency_overrides:
   media_kit_video:
