--- a/console/pubspec.yaml
+++ b/console/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   ffi: ^2.1.4
   path_provider: ^2.1.5
   file_selector: ^1.0.3
+  language_code: ^0.5.5
 
 dependency_overrides:
   media_kit_video:
