--- a/.dist/linux/etc/retrovibed/config.env
+++ b/.dist/linux/etc/retrovibed/config.env
@@ -4,3 +4,4 @@
 # RETROVIBED_TORRENT_AUTO_DISCOVERY=false # enable/disable automatically discovering torrents from peers.
 # RETROVIBED_TORRENT_AUTO_BOOTSTRAP=true # enable/disable the predefined set of public swarms to bootstrap.
 # RETROVIBED_SELF_SIGNED_HOSTS=127.0.0.1  # comma seperated list of ip addresses for the self signed certificate.
+# RETROVIBED_TORRENT_PORT=10000
