--- a/.eg/Containerfile
+++ b/.eg/Containerfile
@@ -29,6 +29,7 @@ RUN sudo -H -S -u egd -g egd flutter config --no-analytics
 RUN sudo -H -S -u egd -g egd flutter --disable-analytics
 RUN sudo -H -S -u egd -g egd dart pub global activate protoc_plugin
 
+RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535886d58"
 # install genieql and golang's protocol buffers plugin
 RUN GOBIN="/usr/local/bin" GOPROXY=direct go install -tags genieql.duckdb github.com/james-lawrence/genieql/...@latest
 RUN GOBIN="/usr/local/bin" go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
