--- a/.eg/Containerfile
+++ b/.eg/Containerfile
@@ -35,5 +35,6 @@ RUN GOBIN="/usr/local/bin" GOPROXY=direct go install -tags genieql.duckdb github
 RUN GOBIN="/usr/local/bin" go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 RUN GOBIN="/usr/local/bin" go install github.com/fatih/gomodifytags@latest
 
+RUN apt-get update
 RUN apt-get -y install tree flatpak-builder libmpv-dev
 RUN flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
