expose settings for public ip addresses.

--- a/.dist/linux/etc/retrovibed/config.env
+++ b/.dist/linux/etc/retrovibed/config.env
@@ -5,3 +5,5 @@
 # RETROVIBED_TORRENT_AUTO_BOOTSTRAP=true # enable/disable the predefined set of public swarms to bootstrap.
 # RETROVIBED_SELF_SIGNED_HOSTS=127.0.0.1  # comma seperated list of ip addresses for the self signed certificate.
 # RETROVIBED_TORRENT_PORT=10000
+# RETROVIBED_TORRENT_PUBLIC_IP4="127.0.0.1"
+# RETROVIBED_TORRENT_PUBLIC_IP6="::1"
