speed up codegen workload via caching

--- a/.eg/Containerfile
+++ b/.eg/Containerfile
@@ -8,15 +8,13 @@ RUN add-apt-repository -n ppa:longsleep/golang-backports
 RUN add-apt-repository -n ppa:egdaemon/eg
 RUN add-apt-repository -n ppa:egdaemon/duckdb
 
+RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535886d58"
 RUN apt-get update
-RUN apt-get -y install golang-1.24 eg egbootstrap podman netavark rsync vim dput devscripts dh-make dput uidmap dbus-user-session git unzip xz-utils zip libglu1-mesa clang cmake git ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+RUN apt-get -y install golang-1.24 eg egbootstrap duckdb podman netavark rsync vim dput devscripts dh-make dput uidmap dbus-user-session git unzip xz-utils zip libglu1-mesa clang cmake git ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
 RUN sh /usr/share/eg/install/github.sh > /dev/null
-RUN apt-get -y install snapd duckdb protobuf-compiler pkgconf clang-19 gh
+RUN apt-get -y install snapd protobuf-compiler pkgconf clang-19 gh tree flatpak-builder libmpv-dev
 
 RUN ln -s /usr/lib/go-1.24/bin/go /usr/local/bin/go
-
-# RUN systemd-sysusers
-# RUN systemd-tmpfiles --create
 
 # install flutter
 RUN curl -o /tmp/flutter.tar.xz https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.29.0-stable.tar.xz
@@ -29,11 +27,11 @@ RUN sudo -H -S -u egd -g egd flutter config --no-analytics
 RUN sudo -H -S -u egd -g egd flutter --disable-analytics
 RUN sudo -H -S -u egd -g egd dart pub global activate protoc_plugin
 
-RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535886d58"
-# install genieql and golang's protocol buffers plugin
-RUN GOBIN="/usr/local/bin" GOPROXY=direct go install -tags genieql.duckdb github.com/james-lawrence/genieql/...@latest
+# install genieql and golang's protocol buffers and other dev tooling.
 RUN GOBIN="/usr/local/bin" go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 RUN GOBIN="/usr/local/bin" go install github.com/fatih/gomodifytags@latest
+RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535886d58"
+RUN GOBIN="/usr/local/bin" GOPROXY=direct go install -tags genieql.duckdb,duckdb_use_lib github.com/james-lawrence/genieql/...@latest
 
 RUN apt-get update
 RUN apt-get -y install tree flatpak-builder libmpv-dev
