--- a/console/pubspec.yaml
+++ b/console/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   path_provider: ^2.1.5
   file_selector: ^1.0.3
   language_code: ^0.5.5
+  url_launcher: ^6.3.1
+  dart_jsonwebtoken: ^3.2.0
+  qs_dart: ^1.3.7+1
 
 dependency_overrides:
   media_kit_video:
