--- a/.eg/Containerfile
+++ b/.eg/Containerfile
@@ -30,7 +30,7 @@ RUN sudo -H -S -u egd -g egd dart pub global activate protoc_plugin
 # install genieql and golang's protocol buffers and other dev tooling.
 RUN GOBIN="/usr/local/bin" go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 RUN GOBIN="/usr/local/bin" go install github.com/fatih/gomodifytags@latest
-RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535886d58"
+RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535886d3"
 RUN GOBIN="/usr/local/bin" GOPROXY=direct go install -tags genieql.duckdb,duckdb_use_lib github.com/james-lawrence/genieql/...@latest
 
 RUN apt-get update
