--- a/console/pubspec.yaml
+++ b/console/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   url_launcher: ^6.3.1
   dart_jsonwebtoken: ^3.2.0
   qs_dart: ^1.3.7+1
+  intl: ^0.20.2
 
 dependency_overrides:
   media_kit_video:
