--- a/shallows/.genieql/driver.yml
+++ b/shallows/.genieql/driver.yml
@@ -1,18 +1,15 @@
-- type: sql.NullString
-  native: string
-  database_type_name: ""
-  column_type: sql.NullString
-  nullable: false
-  primarykey: false
+- type: VARCHAR
+  native: uint64
+  database_type_name: VARCHAR
+  column_type: ducktype.NullUint64
   decode: |-
     func() {
-    		if {{ .From | expr }}.Valid {
-    			tmp := {{ .Type | expr }}({{ .From | expr }}.String)
-    			{{ .To | autodereference | expr }} = tmp
-    		}
-    	}
+      if {{ .From | expr }}.Valid {
+        {{ .To | autodereference | expr }} = {{ .From | expr }}.V
+      }
+    }
   encode: |-
     func() {
-    		{{ .To | expr }}.Valid = true
-    		{{ .To | expr }}.String = {{ .From | expr }}
-    	}
+      {{ .To | expr }}.Valid = true
+      {{ .To | expr }}.V = {{ .From | expr }}
+    }
