--- a/.eg/Containerfile
+++ b/.eg/Containerfile
@@ -35,5 +35,5 @@ RUN flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.
 # install genieql and golang's protocol buffers and other dev tooling.
 RUN GOBIN="/usr/local/bin" go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 RUN GOBIN="/usr/local/bin" go install github.com/fatih/gomodifytags@latest
-RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535786d58"
-RUN GOBIN="/usr/local/bin" GOPROXY=direct go install -tags genieql.duckdb,duckdb_use_lib github.com/james-lawrence/genieql/...@latest
+RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535786d53"
+RUN GOBIN="/usr/local/bin" GOPROXY=direct go install -tags duckdb_use_lib github.com/james-lawrence/genieql/...@latest
