--- a/console/pubspec.yaml
+++ b/console/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   dart_jsonwebtoken: ^3.2.0
   qs_dart: ^1.3.7+1
   intl: ^0.20.2
+  lru: ^1.0.2
 
 dependency_overrides:
   media_kit_video:
