--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,17 +22,30 @@ builds:
   - id: retrovibed-arm64
     env:
       - FOO=BAR
+      # - CGO_ENABLED=1
     goos:
       - darwin
     goarch:
-      - arm64 # Apple Silicon (M1/M2/etc.) Macs
-    main: ./shallows/cmd/retrovibed
+      - arm64
+    main: ./shallows/cmd/cmdmacosxtest
     binary: retrovibed
     flags:
       - -x
       - -v
-    tags:
-      - duckdb_use_lib
+    # tags:
+    #   - duckdb_use_lib
+
+app_bundles:
+  - id: retrovibed # A unique ID for this app bundle
+    # builds:
+    #   - retrovibed-arm64 # Reference the build ID from above
+    name: "Retrovibed"
+    bundle: "space.retrovibe.retrovibed"
+    icon: ".dist/linux/usr/share/icons/hicolor/scalable/apps/retrovibed.svg"
+    # Optional: Customize Info.plist if needed
+    # info_plist:
+    #   NSHumanReadableCopyright: "Copyright © 2025 Your Organization. All rights reserved."
+    #   LSMinimumSystemVersion: "10.15.0"
 
 dmg:
   - # ID of the resulting image.
@@ -70,23 +83,23 @@ dmg:
     # This feature is only available in GoReleaser Pro.
     # Since: v2.4.
     # Templates: allowed.
-    if: '{{ eq .Os "linux" }}'
+    # if: '{{ eq .Os "darwin" }}'
 
-    # GOAMD64 to specify which amd64 version to use if there are multiple
-    # versions from the build section.
-    #
-    # Default: v1.
-    goamd64: v1
+    # # GOAMD64 to specify which amd64 version to use if there are multiple
+    # # versions from the build section.
+    # #
+    # # Default: v1.
+    # goamd64: v1
 
-    # More files that will be available in the context in which the image
-    # will be built.
-    extra_files:
-      - logo.ico
-      - glob: ./docs/*.md
-      - glob: ./single_file.txt
-        # Templates: allowed.
-        # Note that this only works if glob matches exactly 1 file.
-        name_template: file.txt
+    # # More files that will be available in the context in which the image
+    # # will be built.
+    # extra_files:
+    #   - logo.ico
+    #   - glob: ./docs/*.md
+    #   - glob: ./single_file.txt
+    #     # Templates: allowed.
+    #     # Note that this only works if glob matches exactly 1 file.
+    #     name_template: file.txt
 
     # Additional templated extra files to add to the DMG.
     # Those files will have their contents pass through the template engine,
