--- a/.eg/Containerfile
+++ b/.eg/Containerfile
@@ -1,5 +1,8 @@
 FROM ubuntu:oracular
 ARG DEBIAN_FRONTEND=noninteractive
+ARG GOBIN="/usr/bin"
+ARG GOMODCACHE="/tmp/gomod"
+ARG GOCACHE="/tmp/gocache"
 
 RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535886d58"
 RUN apt-get update
@@ -33,7 +36,10 @@ RUN apt-get -y install tree flatpak-builder libmpv-dev
 RUN flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
 
 # install genieql and golang's protocol buffers and other dev tooling.
-RUN GOBIN="/usr/local/bin" go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-RUN GOBIN="/usr/local/bin" go install github.com/fatih/gomodifytags@latest
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+RUN go install github.com/fatih/gomodifytags@latest
 RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535786d53"
-RUN GOBIN="/usr/local/bin" GOPROXY=direct go install -tags duckdb_use_lib github.com/james-lawrence/genieql/...@latest
+RUN GOPROXY=direct go install -tags duckdb_use_lib github.com/james-lawrence/genieql/...@latest
+RUN GOPROXY=direct go install github.com/egdaemon/eg/cmd/...@v0.0.0-20250806181324-a1420405d47b
+RUN systemd-tmpfiles --create
+RUN systemd-tmpfiles --clean
