debugging darwin runner

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,13 +35,20 @@ jobs:
           ${{ runner.os }}-go-${{ steps.setup-go-macos.outputs.go-version }}-installed- # Fallback keys
     - uses: tecolicom/actions-use-homebrew-tools@v1
       with:
-        tools: 'duckdb gpgme flutter tree'
+        tools: 'duckdb gpgme flutter tree podman'
         verbose: false
 
+    - name: eg
+      run: |
+        go install github.com/egdaemon/eg/...@latest
     - name: Checkout repository
       uses: actions/checkout@v4
     - name: build
       run: |
-        CGO_ENABLED=1 CGO_LDFLAGS="-L/opt/homebrew/lib" go -C console/retrovibedbind build -buildmode=c-shared --tags duckdb_use_lib -o ../build/nativelib/retrovibed.so ./...
-        pushd console && flutter build macos --release lib/main.dart && popd
-        tree build
+        podman machine init --now
+        podman version
+        which eg
+        eg compute baremetal release/darwin
+        # CGO_ENABLED=1 CGO_LDFLAGS="-L/opt/homebrew/lib" go -C console/retrovibedbind build -buildmode=c-shared --tags duckdb_use_lib -o ../build/nativelib/retrovibed.so ./...
+        # pushd console && flutter build macos --release lib/main.dart && popd
+        # tree build
