--- a/.eg/Containerfile
+++ b/.eg/Containerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:oracular
+FROM ubuntu:plucky
 ARG DEBIAN_FRONTEND=noninteractive
 ARG GOBIN="/usr/bin"
 ARG GOMODCACHE="/tmp/gomod"
@@ -40,6 +40,6 @@ RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 RUN go install github.com/fatih/gomodifytags@latest
 RUN echo "cache buster 059a9a06-1686-4f49-9a7f-a30535786d53"
 RUN GOPROXY=direct go install -tags duckdb_use_lib github.com/james-lawrence/genieql/...@latest
-RUN GOPROXY=direct go install github.com/egdaemon/eg/cmd/...@v0.0.0-20250806181324-a1420405d47b
+
 RUN systemd-tmpfiles --create
 RUN systemd-tmpfiles --clean
