--- a/console/pubspec.yaml
+++ b/console/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   qs_dart: ^1.3.7+1
   intl: ^0.20.2
   lru: ^1.0.2
+  qr_flutter: ^4.1.0
 
 # rsvg-convert -w 1024 -h 1024 -o console/icons/application.png .dist/linux/usr/share/icons/hicolor/scalable/apps/retrovibed.svg
 dev_dependencies:
