--- a/console/pubspec.yaml
+++ b/console/pubspec.yaml
@@ -41,7 +41,11 @@ dependencies:
   desktop_drop: ^0.5.0
   mime: ^2.0.0
   media_kit: ^1.2.0
-  media_kit_video: ^1.3.0
+  media_kit_video:
+      git:
+        url: https://github.com/media-kit/media-kit.git
+        ref: c9617f570b8c0ba02857e721997f78c053a856c1
+        path: media_kit_video
   media_kit_libs_video: ^1.0.6
   uuid: ^4.5.1
   ffi: ^2.1.4
@@ -53,13 +57,6 @@ dependencies:
   qs_dart: ^1.3.7+1
   intl: ^0.20.2
   lru: ^1.0.2
-
-dependency_overrides:
-  media_kit_video:
-    git:
-      url: https://github.com/james-lawrence/media-kit.git
-      ref: james.lawrence/focus-fix
-      path: media_kit_video
 
 # rsvg-convert -w 1024 -h 1024 -o console/icons/application.png .dist/linux/usr/share/icons/hicolor/scalable/apps/retrovibed.svg
 dev_dependencies:
