--- a/.github/workflows/macosx.build.yml
+++ b/.github/workflows/macosx.build.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: eg
       run: |
-        go install github.com/egdaemon/eg/...@latest
+        GOPROXY=direct go install github.com/egdaemon/eg/...@latest
     - name: Checkout repository
       uses: actions/checkout@v4
     - name: build
