install podman-desktop using brew

--- a/.github/workflows/macosx.build.yml
+++ b/.github/workflows/macosx.build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   macos:
-    name: test
+    name: macosx-build
     runs-on: macos-latest
 
     steps:
@@ -34,7 +34,7 @@ jobs:
           ${{ runner.os }}-go-${{ steps.setup-go-macos.outputs.go-version }}-installed- # Fallback keys
     - uses: tecolicom/actions-use-homebrew-tools@v1
       with:
-        tools: 'duckdb gpgme flutter tree'
+        tools: 'duckdb gpgme flutter tree podman-desktop'
         verbose: false
 
     - name: eg
@@ -47,7 +47,7 @@ jobs:
         # podman machine init --now
         # podman version
         which eg
-        eg compute baremetal --no-podman release/darwin
+        eg compute baremetal release/darwin
         # CGO_ENABLED=1 CGO_LDFLAGS="-L/opt/homebrew/lib" go -C console/retrovibedbind build -buildmode=c-shared --tags duckdb_use_lib -o ../build/nativelib/retrovibed.so ./...
         # pushd console && flutter build macos --release lib/main.dart && popd
         # tree build
