--- a/.github/workflows/macosx.build.yml
+++ b/.github/workflows/macosx.build.yml
@@ -44,8 +44,8 @@ jobs:
       uses: actions/checkout@v4
     - name: build
       run: |
-        # podman machine init --now
-        # podman version
+        podman machine init --now
+        podman version
         which eg
         eg compute baremetal release/darwin
         # CGO_ENABLED=1 CGO_LDFLAGS="-L/opt/homebrew/lib" go -C console/retrovibedbind build -buildmode=c-shared --tags duckdb_use_lib -o ../build/nativelib/retrovibed.so ./...
