--- a/.github/workflows/macosx.build.yml
+++ b/.github/workflows/macosx.build.yml
@@ -1,15 +1,11 @@
 name: macos build
 on:
-  # push:
-  #   branches:
-  #     - main
   workflow_dispatch: # Allows manual triggering
 
 jobs:
   macos:
     name: macosx-build
     runs-on: macos-latest
-
     steps:
     - name: Set up Homebrew
       id: set-up-homebrew
@@ -34,20 +30,18 @@ jobs:
           ${{ runner.os }}-go-${{ steps.setup-go-macos.outputs.go-version }}-installed- # Fallback keys
     - uses: tecolicom/actions-use-homebrew-tools@v1
       with:
-        tools: 'duckdb gpgme flutter tree podman-desktop'
+        tools: 'duckdb gpgme flutter tree'
         verbose: false
 
-    - name: eg
-      run: |
-        GOPROXY=direct go install github.com/egdaemon/eg/...@latest
+    # - name: eg
+    #   run: |
+    #     GOPROXY=direct go install github.com/egdaemon/eg/...@latest
     - name: Checkout repository
       uses: actions/checkout@v4
     - name: build
       run: |
+        brew install --cask podman-desktop
         podman machine init --now
         podman version
-        which eg
-        eg compute baremetal release/darwin
-        # CGO_ENABLED=1 CGO_LDFLAGS="-L/opt/homebrew/lib" go -C console/retrovibedbind build -buildmode=c-shared --tags duckdb_use_lib -o ../build/nativelib/retrovibed.so ./...
-        # pushd console && flutter build macos --release lib/main.dart && popd
-        # tree build
+        # which eg
+        # eg compute baremetal release/darwin
