--- a/.github/workflows/macosx.build.yml
+++ b/.github/workflows/macosx.build.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/checkout@v4
     - name: build
       run: |
-        brew install --cask podman-desktop
+        brew install --cask podman-desktop podman
         podman machine init --now
         podman version
         # which eg
