--- a/.github/workflows/macosx.build.yml
+++ b/.github/workflows/macosx.build.yml
@@ -1,6 +1,11 @@
 name: macos build
+permissions:
+  contents: write
 on:
-  workflow_dispatch: # Allows manual triggering
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   macos:
@@ -13,36 +18,26 @@ jobs:
 
     - name: Setup Go environment on macOS
       id: setup-go-macos
-      uses: actions/setup-go@v5 # Using setup-go action for Go installation and caching
+      uses: actions/setup-go@v5
       with:
         go-version: 'stable' # Use 'stable' to always get the latest stable Go version
         cache: true # Enable caching for Go modules and build cache
         check-latest: true # Ensures the latest stable version is always used
-    - name: Cache Go module and build cache
-      id: cache-go-install-deps # Add an ID for this cache step
-      uses: actions/cache@v4
-      with:
-        path: |
-          ${{ steps.setup-go-macos.outputs.go-mod-cache }} # Path to Go module cache
-          ${{ steps.setup-go-macos.outputs.go-build-cache }} # Path to Go build cache
-        key: ${{ runner.os }}-go-${{ steps.setup-go-macos.outputs.go-version }}-installed # Unique key for this cache
-        restore-keys: |
-          ${{ runner.os }}-go-${{ steps.setup-go-macos.outputs.go-version }}-installed- # Fallback keys
     - uses: tecolicom/actions-use-homebrew-tools@v1
       with:
         tools: 'duckdb gpgme flutter tree'
+        # tools: 'duckdb gpgme tree'
         verbose: false
-
-    # - name: eg
-    #   run: |
-    #     GOPROXY=direct go install github.com/egdaemon/eg/...@latest
+    - name: Install EG
+      uses: nick-fields/retry@v3
+      with:
+        max_attempts: 5  # Number of retries
+        timeout_minutes: 10
+        command: GOPROXY=direct go install github.com/egdaemon/eg/...@latest
     - name: Checkout repository
       uses: actions/checkout@v4
     - name: build
+      env:
+        GH_TOKEN: ${{ github.token }}
       run: |
-        brew install --cask podman-desktop
-        brew install podman
-        podman machine init --now
-        podman version
-        # which eg
-        # eg compute baremetal release/darwin
+        eg compute baremetal -e GH_TOKEN --no-podman release/darwin
